implemented play round with html buttons

--- a/index.html
+++ b/index.html
@@ -4,11 +4,19 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="style.css" />
+    <!-- <link rel="stylesheet" href="css/bootstrap.min.css" /> -->
+    <link rel="stylesheet" href="css/style.css" />
     <title>Rock, Paper, Scissors!</title>
+
+    <style></style>
   </head>
   <body>
-    <!-- https://getbootstrap.com/docs/5.1/examples/pricing/ -->
+    <header class="">Rock, Paper, Scissors!</header>
+    <main class="container d-flex">
+      <div id="">Rock <button onclick="playRound('rock')" id="">Play me!</button></div>
+      <div id="">Paper <button onclick="playRound('paper')" id="">Play me!</button></div>
+      <div id="">Scissors <button onclick="playRound('scissors')" id="">Play me!</button></div>
+    </main>
     <script src="script.js"></script>
   </body>
 </html>
