--- a/index.html
+++ b/index.html
@@ -11,11 +11,39 @@
     <style></style>
   </head>
   <body>
-    <header class="">Rock, Paper, Scissors!</header>
+    <header class="">
+      <h1>Rock, Paper, Scissors!</h1>
+      <p>play agaisnt the computer blablabla best of 5</p>
+
+      <div class="stats">
+        <h2></h2>
+        <p id="rounds">Rounds played: 0</p>
+        <p>
+          <span id="wins">Wins: 0</span>
+          <span id="draws">Draws: 0</span>
+          <span id="loses">Loses: 0</span>
+        </p>
+      </div>
+    </header>
     <main class="container d-flex">
-      <div id="">Rock <button onclick="playRound('rock')" id="">Play me!</button></div>
-      <div id="">Paper <button onclick="playRound('paper')" id="">Play me!</button></div>
-      <div id="">Scissors <button onclick="playRound('scissors')" id="">Play me!</button></div>
+      <div class="cards">
+        <!-- https://openmoji.org/ -->
+        <div id="" onclick="playRound('rock')">
+          <h3>Rock</h3>
+          <img src="img/rock.svg" width="300" height="300" alt="" />
+          <button class="play-me">Play me!</button>
+        </div>
+        <div id="" onclick="playRound('paper')">
+          <h3>Paper</h3>
+          <img src="img/paper.svg" width="300" height="300" alt="" />
+          <button class="play-me">Play me!</button>
+        </div>
+        <div id="" onclick="playRound('scissors')">
+          <h3>Scissors</h3>
+          <img src="img/scissors.svg" width="300" height="300" alt="" />
+          <button class="play-me">Play me!</button>
+        </div>
+      </div>
     </main>
     <script src="script.js"></script>
   </body>
