added play feedback

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
           <p class="fs-5 text-muted">
             Play against the machine on a best of 5 match to hone your skills!
           </p>
+          <h3 class="fw-normal" id="play-area">Choose a play!</h3>
         </div>
       </header>
 
