refined play feedback

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <div class="game-header p-3 pb-md-4 mx-auto text-center">
           <h1 class="display-4 fw-normal">Rock, paper, scissors!</h1>
           <p class="fs-5 text-muted">
-            Play against the machine on a best of 5 match to hone your skills!
+            Play against the machine on a best of <span id="max-rounds">7</span> match to hone your skills!
           </p>
           <h3 class="fw-normal" id="play-area">Choose a play!</h3>
         </div>
