adjusted responsiveness on very small screens

--- a/index.html
+++ b/index.html
@@ -62,10 +62,10 @@
          <button onclick="resetMatch()" id="reset-button" type="button" class="btn btn-outline-secondary">Reset match</button>
         <h2></h2>
         <p class="h3 py-2 fw-normal" id="rounds">Rounds played: 0</p>
-        <p class="h5 fw-normal">
-          <span id="wins" class="mx-3 text-success">Wins: 0</span>
-          <span id="draws" class="mx-3 text-secondary">Draws: 0</span>
-          <span id="loses" class="mx-3 text-danger">Loses: 0</span>
+        <p id="stats" class="h5 fw-normal">
+          <span id="wins" class="mx-3 my-1 text-success">Wins: 0</span>
+          <span id="draws" class="mx-3 my-1 text-secondary">Draws: 0</span>
+          <span id="loses" class="mx-3 my-1 text-danger">Loses: 0</span>
         </p>
       
     </div>
